# scion

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
control/drkey/: service_engine.go
daemon/internal/servers/: BUILD.bazel
idint_eval/: gen_packets.py
pkg/drkey/: BUILD.bazel  drkey.go  protocol.go
pkg/drkey/specific/: specific.go
pkg/fcrypto/: BUILD.bazel  Makefile  crypto.c  crypto.go  crypto.h  crypto_test.go
pkg/fcrypto/benchmark/: BUILD.bazel  main.go
pkg/fcrypto/c/: test.c
pkg/proto/drkey/: drkey.pb.go
pkg/slayers/: BUILD.bazel  id_int.go  idint.go  l4.go  layertypes.go  scion.go
pkg/snet/: BUILD.bazel  idint.go  key_cache.go  packet.go  snet.go  udp_range.go  udp_range_windows.go
private/drkey/: BUILD.bazel  fetcher.go  provider.go
private/env/: env.go  features.go
private/topology/: topology.go
private/topology/json/: json.go
private/trust/grpc/: BUILD.bazel
proto/drkey/v1/: drkey.proto
router/: BUILD.bazel  connector.go  dataplane.go  meter.go
router/cmd/router/: BUILD.bazel  main.go
router/config/: BUILD.bazel  config.go  sample.go
router/control/: conf.go  iactx.go
svcctrl/: main.go
svctest/cmd/svctest/: main.go
tools/topology/: cert.py
topology/: idint_eval.topo  scionday.topo  testbed.topo
