load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "crypto.c",
        "crypto.go",
        "crypto.h",
    ],
    cgo = True,
    copts = select({
        "@io_bazel_rules_go//go/platform:amd64": [
            "-march=native",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/scionproto/scion/pkg/fcrypto",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["crypto_test.go"],
    deps = select({
        "@io_bazel_rules_go//go/platform:amd64": [
            ":go_default_library",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
