load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fetcher.go",
        "provider.go",
    ],
    importpath = "github.com/scionproto/scion/private/drkey",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/drkey:go_default_library",
        "//pkg/drkey/specific:go_default_library",
        "//pkg/grpc:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/control_plane:go_default_library",
        "//pkg/proto/drkey:go_default_library",
        "//pkg/scrypto/cppki:go_default_library",
        "//pkg/snet:go_default_library",
        "//private/drkey/drkeyutil:go_default_library",
        "//private/periodic:go_default_library",
        "//router/config:go_default_library",
        "//router/control:go_default_library",
        "@com_github_hashicorp_golang_lru_arc_v2//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)
