load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/pkg/fcrypto/benchmark",
    visibility = ["//visibility:private"],
    deps = ["//pkg/fcrypto:go_default_library"],
)

go_binary(
    name = "benchmark",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
